The hair properties "Radius Root" and "Radius Tip" should actually be named "Diameter Root" and "Diameter Tip" #73620

Closed
opened 2020-02-06 00:29:30 +01:00 by Max Frei · 7 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66

Blender Version
Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449
Worked: (optional)

Short description of error
The attached blend file is set up in a way that 1 meter equals 1 pixel. However, when measuring the thickness of the hair (e.g. in Gimp) the hair is just 20 pixels thick, although the
"Radius Root" and "Radius Tip" properties are set to 20 meter. The cube however, has the expected edge length of 100 pixels. Therefore, the hair properties "Radius Root" and "Radius Tip" should actually be named "Diameter Root" and "Diameter Tip". Alternatively, I may have made a stupid mistake that I don't see.

Exact steps for others to reproduce the error
Open the attached blend file, have a look at the "Radius Root" and "Radius Tip" properties, as well as the size of the cube. Render the image and measure the dimensions of the hair and the cube.

hair_and_cube.blend

untitled.png

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 441.66 **Blender Version** Broken: version: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: `f6cb5f5449` Worked: (optional) **Short description of error** The attached blend file is set up in a way that 1 meter equals 1 pixel. However, when measuring the thickness of the hair (e.g. in Gimp) the hair is just 20 pixels thick, although the "Radius Root" and "Radius Tip" properties are set to 20 meter. The cube however, has the expected edge length of 100 pixels. Therefore, the hair properties "Radius Root" and "Radius Tip" should actually be named "Diameter Root" and "Diameter Tip". Alternatively, I may have made a stupid mistake that I don't see. **Exact steps for others to reproduce the error** Open the attached blend file, have a look at the "Radius Root" and "Radius Tip" properties, as well as the size of the cube. Render the image and measure the dimensions of the hair and the cube. [hair_and_cube.blend](https://archive.blender.org/developer/F8324593/hair_and_cube.blend) ![untitled.png](https://archive.blender.org/developer/F8324594/untitled.png)
Author

Added subscriber: @Max-Frei

Added subscriber: @Max-Frei
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Good News! This was (mostly) fixed Jan 6th and will be in the 2.82 release!

hair diameter.jpg

Mostly..."Radius Scale" wasn't corrected to the accurate label "Diameter Scale." I have set it to 1 in my example, along with the "Diameter Root." The plane that the single hair particle is on is the default 2m by 2m. In the pictures you can see that the root of the hair only covers 1m of the plane.

radius scale.jpg

It should be "Root Diameter" and "Tip Diameter" in order to match the tool tip, and to make grammatical sense.

I will update this report to reflect this.

I will close this as resolved, Since your requested changes are in master. I'll open a new report to reflect the other needed changes.

Good News! This was (mostly) fixed Jan 6th and will be in the 2.82 release! ![hair diameter.jpg](https://archive.blender.org/developer/F8324796/hair_diameter.jpg) Mostly..."Radius Scale" wasn't corrected to the accurate label "Diameter Scale." I have set it to 1 in my example, along with the "Diameter Root." The plane that the single hair particle is on is the default 2m by 2m. In the pictures you can see that the root of the hair only covers 1m of the plane. ![radius scale.jpg](https://archive.blender.org/developer/F8324808/radius_scale.jpg) It should be "Root Diameter" and "Tip Diameter" in order to match the tool tip, and to make grammatical sense. ~~I will update this report to reflect this.~~ I will close this as resolved, Since your requested changes are in master. I'll open a new report to reflect the other needed changes.
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Evan Wilson self-assigned this 2020-02-06 04:07:08 +01:00
Author

Fantastic! Thank you very much.

Fantastic! Thank you very much.

This issue was referenced by 2c5379b405

This issue was referenced by 2c5379b405d8baf6220e390b81a0d48409aeef75
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73620
No description provided.