Fix T73620: Diameter Scale was calles 'Radius'

This was left over from when the other properties were renamed.